# python-project-lvl2

./: .coverage  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml  lint.yml  tests.yml
gendiff/: Makefile  __init__.py  formatting.py  generate_diff.py  make_diff.py  parser.py  printer.py  pyproject.toml
gendiff/formatting/: json.py  plain.py  stylish.py
gendiff/gendiff/: generate_diff.py
gendiff/gendiff/scripts/: gendiff.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py  test_json.py  test_parser.py  test_plain.py  test_stylish.py
tests/fixtures/expected/: exp_json.txt  exp_nested_json.txt
