[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Ivansergee <klimentievis@inbox.ru>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^3.8.4"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
